--- a/src/App.css
+++ b/src/App.css
@@ -176,3 +176,13 @@ body::-webkit-scrollbar-thumb:hover {
     width: 200px;
     height: 200px;
 }
+
+@keyframes heartBeat {
+    0%, 100% { transform: scale(1); }
+    25% { transform: scale(1.3); }
+    50% { transform: scale(1.1); }
+}
+
+.heart-animation {
+    animation: heartBeat 0.6s ease-in-out;
+}
